# CustomerChurn

./: pyproject.toml
data/processed/: X_test_scaled.csv  X_train_scaled.csv  knn_results.csv  logistic_regression_results.csv  random_forest_results.csv  svm_results.csv
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  04_final_comparison.ipynb
notebooks/models/: 03a_logistic_regression.ipynb  03b_random_forest.ipynb  03c_knn.ipynb  03d_svm.ipynb
